--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 #header {
@@ -10,14 +10,40 @@ font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
     color: peachpuff;
     background: linear-gradient(to right, blue, rgb(10, 10, 115));
 }
-#box{
+
+#box {
     background-color: red;
 }
+
 button {
     transition-duration: 0.4s;
-  }
-  
-  button:hover {
-    background-color: #1100ff; /* Green */
+
+}
+
+button:hover {
+    background-color: #1100ff;
     color: white;
-  }
+}
+
+.btn-group .button {
+    background-color: #4CAF50;
+    /* Green */
+    border: 1px solid green;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    width: 150px;
+    display: block;
+}
+
+.btn-group .button:not(:last-child) {
+    border-bottom: none;
+    /* Prevent double borders */
+}
+
+.btn-group .button:hover {
+    background-color: #3e8e41;
+}
