--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@
      width: 100%;
      max-width: 420px;
      margin: 1em;
+     display: flex;
  }
 
  .search {
@@ -50,3 +51,8 @@
      text-transform: capitalize;
      margin-left: 8px;
  }
+
+ .weatherForecastCards {
+grid-auto-rows: 100px;
+
+}
